--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -44,10 +44,15 @@
     &__content {
         text-align: center;
         z-index: 2;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
         @media (max-width: 640px) {
             width: 100%;
             max-width: 100vw;
+            margin-top: 50px;
         }
     }
 
@@ -123,6 +128,25 @@
             padding: 10px 24px;
             font-size: 0.9rem;
             border-radius: 25px;
+        }
+    }
+
+    &__recent-wrapper {
+        position: absolute;
+        top: 110%;
+        width: 100%;
+        max-width: 320px;
+        pointer-events: all;
+
+        @media (max-width: 640px) {
+            position: relative;
+            top: 0;
+            margin: 20px auto 0;
+            max-width: 280px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
         }
     }
 }
