--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -133,12 +133,13 @@
             position: fixed;
             top: 65px;
             right: -100%;
-            width: 250px;
+            width: 170px;
             height: auto;
             background: rgba(15, 15, 15, 0.95);
             flex-direction: column;
             gap: 2rem;
-            align-items: flex-start;
+            align-items: center;
+            text-align: center;
             padding: 40px 20px;
             transition: right 0.3s ease;
             backdrop-filter: blur(10px);
@@ -155,7 +156,7 @@
             background: rgba(15, 15, 15, 0.95);
             flex-direction: column;
             gap: 3rem;
-            align-items: flex-start;
+            align-items: center;
             padding: 20px 10px;
             transition: right 0.3s ease;
         }
