--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,6 +31,7 @@ body {
     font-family: $font-main;
     margin: 0;
     padding: 0;
+    user-select: none;
 }
 
 h1, h2, h3, h4, .logo, .nav-link {
@@ -42,4 +43,8 @@ h1, h2, h3, h4, .logo, .nav-link {
 button, input, textarea, select {
     font-family: inherit;
     font-weight: 700;
+}
+
+input, textarea {
+    user-select: text;
 }
